--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,8 @@
   }
 }
 
+body{
+  /* background-color:antiquewhite */
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+}
