--- a/src/components/Branches/Branches.css
+++ b/src/components/Branches/Branches.css
@@ -63,3 +63,10 @@
     border: 5px solid black;
     border-radius: 5px;
 }
+
+@media screen and (max-width:600px) {
+    .iframe-branches{
+        width: 100%;
+        height: 100%;
+    }
+}
