--- a/src/components/Foods/Foods.css
+++ b/src/components/Foods/Foods.css
@@ -60,3 +60,10 @@
     border: 5px solid black;
     border-radius: 5px;
 }
+
+@media screen and (max-width:600px) {
+    .iframe-foods{
+        width: 100%;
+        height: 100%;
+    }
+}
